# QG8-C

./: .gitignore  CMakeLists.txt
support/cmake/: qg8-config.cmake.in  qg8.pc.in
test/: CMakeLists.txt  common_test.h
test/data/: file_read.qg8
test/file/: file_read.c  file_write.c
test/graph/: graph_load.c
